fix: Adjust repeater control alignment

--- a/packages/form-builder/src/App.scss
+++ b/packages/form-builder/src/App.scss
@@ -417,3 +417,7 @@ This creates a consistent separator between the tabs and the rest of the sidebar
 .popover-slot {
     position: fixed;
 }
+
+.givewp-donation-level-control .components-base-control {
+    margin-bottom: 0;
+}
